# suuper

./: .gitignore  LICENSE  README  README.md  connect_kubectl_local.sh  destroy_local_cluster.sh  export.py  main.yml  start_aws_cluster.sh  start_local_cluster.sh  stop_aws_cluster.sh  stop_local_cluster.sh
local_cluster/: Vagrantfile
local_cluster/roles/: .gitignore  k8s.yml
local_cluster/roles/common/add_packages/defaults/: main.yml
local_cluster/roles/common/add_packages/tasks/: main.yml
metrics_agent/: README  export.py  metrics.csv  pyproject.toml
remote_cluster/: main.yml
remote_cluster/deployment/kubernetes-manifests/k8s-with-istio/: trainticket-gateway.yaml
remote_cluster/deployment/kubernetes-manifests/k8s-with-jaeger/: ts-deployment-part1.yml  ts-deployment-part2.yml
remote_cluster/deployment/kubernetes-manifests/prometheus/: mongodb-exporter.yaml  prometheus.yaml  prometheus.yml
remote_cluster/roles/deploy/tasks/: main.yml
remote_cluster/roles/eks/defaults/: main.yml
remote_cluster/roles/eks/tasks/: main.yml
remote_cluster/roles/microservices/tasks/: main.yml
roles/istio/defaults/: main.yml
roles/istio/tasks/: apply.yml  main.yml  plugins.yml
roles/istio/templates/: default.yml
roles/microservices/tasks/: 00-sock-shops-ns.yml  01-carts.yml  02-carts-db.yml  03-catalogue.yml  04-catalogue-db.yml  05-frontend.yml  06-orders.yml  07-orders-db.yml  08-payment.yml  09-queue-master.yml  10-rabbitmq.yml  11-session.yml  12-shipping.yml  13-user.yml  14-user-db.yml  15-frontend-lb.yml  main.yml
(+7 files in other folders)
